ACTIVEMQ6-2 Update to HQ master